Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
         </ul>
       </header>
       <section>
-        <p>Slides!</p>
+        <ol>
+<li><a href="http://nealcaren.github.io/workshop_2014/1_into.slides.html">Introduction</a></li>
+<li><a href="http://nealcaren.github.io/workshop_2014/2_Twitter.slides.html">Reading code</a></li>
+<li><a href="http://nealcaren.github.io/workshop_2014/3_Sentiment.slides.html">Writing code</a></li>
+<li><a href="http://nealcaren.github.io/workshop_2014/4_Upworthy.slides.html">Scraping</a></li>
+<li><a href="http://nealcaren.github.io/workshop_2014/5_Times_API.slides.html">APIs</a></li>
+<li><a href="http://nealcaren.github.io/workshop_2014/6_Classification.slides.html">Analysis</a></li>
+</ol>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nealcaren">nealcaren</a></p>
