Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
         </ul>
       </header>
       <section>
-        <ol>
+        <p>You can follow along by looking at the presentations. They will load in your browser. </p>
+
+<ol>
 <li><a href="http://nealcaren.github.io/workshop_2014/1_into.slides.html">Introduction</a></li>
 <li><a href="http://nealcaren.github.io/workshop_2014/2_Twitter.slides.html">Reading code</a></li>
 <li><a href="http://nealcaren.github.io/workshop_2014/3_Sentiment.slides.html">Writing code</a></li>
 <li><a href="http://nealcaren.github.io/workshop_2014/4_Upworthy.slides.html">Scraping</a></li>
 <li><a href="http://nealcaren.github.io/workshop_2014/5_Times_API.slides.html">APIs</a></li>
 <li><a href="http://nealcaren.github.io/workshop_2014/6_Classification.slides.html">Analysis</a></li>
-</ol>
+</ol><p>A better way to follow along is to click on one of the buttons to the left and download all the IPython notebooks and associated files. You'll see the same information, but you'll be able to play with it too.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nealcaren">nealcaren</a></p>
