--- a/1_into.slides.html
+++ b/1_into.slides.html
@@ -1736,11 +1736,10 @@ text-align: inherit;
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="neal-caren">Neal Caren</h3>
 <p>Department of Sociology<br />University of North Carolina, Chapel Hill<br />neal.caren@gmail.com<br /><span class="citation">@haphazardsoc</span></p>
-</div></section>
-    </section><section>
-    <section>
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Winning makes us happy.<br /><img src="fb.png" /><br />by Sean J. Taylor (<span class="citation">@seanjtaylor</span>)</p>
+<p>Code available from<br />http://nealcaren.github.io/workshop_2014/</p>
+<p>Please make sure you have a copy of IPython up and running, ideally from Anacodna.</p>
+<p>If you are bored, download the zip file, unzip it, and open up an <code>IPython Notebook</code>.</p>
+<p>If you are still bored, sign up at the <a href="http://developer.nytimes.com">New York Times</a> to be a developer.</p>
 </div></section>
     </section><section>
     <section>
@@ -1755,6 +1754,17 @@ text-align: inherit;
 <div class="figure">
 <img src="files\petitions.png" />
 </div>
+</div></section>
+    </section><section>
+    <section>
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Trends in Tea Party Coverage</p>
+<div class="figure">
+<img src="files\tpm_lda.png" />
+</div>
+</div>
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>!</p>
 </div></section>
     </section><section>
     <section>
@@ -1788,7 +1798,7 @@ text-align: inherit;
     
 <div class="text_cell_render border-box-sizing rendered_html">
 <div class="figure">
-<img src="Stanford.jpg" />
+<img src="stanford.png" />
 </div>
 </div>
     </div></section>
@@ -1916,10 +1926,10 @@ In&nbsp;[3]:
 <ul>
 <li><a href="http://nltk.org">NLTK</a> Natural Language Toolkit. There's a <a href="http://nltk.org/book/">book</a></li>
 <li><a href="http://scikit-learn.org/stable/">scikit-learn</a> Machine learning</li>
-<li><a href="http://pandas.pydata.org">pandas</a> Data management and analysis</li>
+<li><a href="http://pandas.pydata.org">pandas</a> Data management and analysis. There is a book.</li>
 <li><a href="http://radimrehurek.com/gensim/">gensim</a> Topic modeling</li>
 <li><a href="http://networkx.github.io">NetworkX</a> Network analysis</li>
-<li><a href="http://www.numpy.org">NumPy</a> and <a href="http://scipy.org">scipy</a> Computational backbone</li>
+<li><a href="http://matplotlib.org">matplotlib</a> Plotting* <a href="http://www.numpy.org">NumPy</a> and <a href="http://scipy.org">scipy</a> Computational backbone</li>
 <li><a href="http://rpy.sourceforge.net">rpy</a> Python bindings for R</li>
 </ul>
 </div>
