--- a/4_Upworthy.slides.html
+++ b/4_Upworthy.slides.html
@@ -1930,7 +1930,9 @@ In&nbsp;[58]:
 <div class="figure">
 <img src="showing_source.png" />
 </div>
-</div>
+</div></section>
+    </section><section>
+    <section>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>When a simple idea...</p>
 <div class="figure">
@@ -2345,7 +2347,9 @@ In&nbsp;[67]:
 </div>
 
 </div>
-    </div>
+    </div></section>
+    </section><section>
+    <section>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Production time!!!</p>
 </div><div class="fragment">
@@ -3349,7 +3353,11 @@ The Hilarious Beer Commercial No Brewery Wants You To See
 <li>Production!</li>
 </ol>
 </div>
-    </div></section>
+    </div>
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>It gets more complicated.</p>
+<p>In general, the more a company profits from their information as a unique resource, the harder it is to scape.</p>
+</div></section>
     </section>
 </div>
 </div>
