--- a/1_into.slides.html
+++ b/1_into.slides.html
@@ -1755,14 +1755,14 @@ text-align: inherit;
     <section>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Yelp can tell us how SES structures food options.</p>
-<p><img src="files\high_ses.png" /> <img src="files\mid_ses.png" /> <img src="files\low_ses.png" /></p>
+<p><img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/high_ses.png" /> <img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/mid_ses.png" /> <img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/low_ses.png" /></p>
 </div></section>
     </section><section>
     <section>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Or map who supports secession</p>
 <div class="figure">
-<img src="files\petitions.png" />
+<img src="http://nealcaren.github.io/workshop_2014/files/petitions.png" />
 </div>
 </div></section>
     </section><section>
@@ -1783,14 +1783,19 @@ text-align: inherit;
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Trends in Tea Party Coverage</p>
 <div class="figure">
-<img src="files\tpm_lda.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/tpm_lda.png" />
 </div>
 </div></section>
     </section><section>
     <section>
 <div class="text_cell_render border-box-sizing rendered_html">
+<p>How many people were on Occupy Facebook pages? <img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/occupy.png" /></p>
+</div></section>
+    </section><section>
+    <section>
+<div class="text_cell_render border-box-sizing rendered_html">
 <p>How the New York Times writes about and women</p>
-<p><img src="times_female.png" /> <img src="times_male.png" /></p>
+<p><img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/times_female.png" /> <img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/times_male.png" /></p>
 </div></section>
     </section><section>
     <section>
@@ -1824,7 +1829,7 @@ text-align: inherit;
     
 <div class="text_cell_render border-box-sizing rendered_html">
 <div class="figure">
-<img src="stanford.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/stanford.png" />
 </div>
 </div>
     </div></section>
@@ -1859,7 +1864,7 @@ text-align: inherit;
 <h4 id="getting-yourself-setup">Getting yourself setup</h4>
 <p>On a Mac</p>
 <div class="figure">
-<img src="on_a_mac.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/on_a_mac.png" />
 </div>
 </div></section>
     </section><section>
@@ -1867,7 +1872,7 @@ text-align: inherit;
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>On Windows</p>
 <div class="figure">
-<img src="windows.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/windows.png" />
 </div>
 </div></section>
     </section><section>
@@ -1875,7 +1880,7 @@ text-align: inherit;
 <div class="text_cell_render border-box-sizing rendered_html">
 <h4 id="ipython-notebooks-are-what-all-the-cool-kids-use.">Ipython Notebooks are what all the cool kids use.</h4>
 <div class="figure">
-<img src="first_screen.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/first_screen.png" />
 </div>
 </div></section>
     </section><section>
@@ -1883,7 +1888,7 @@ text-align: inherit;
 <div class="text_cell_render border-box-sizing rendered_html">
 <h4 id="a-new-notebook">A new notebook</h4>
 <div class="figure">
-<img src="new_workbook.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/blank.png" />
 </div>
 </div></section>
     </section><section>
@@ -1891,7 +1896,7 @@ text-align: inherit;
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Cells can be Markdown (like this one) or code</p>
 <div class="figure">
-<img src="files\cell_types.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/cell_types.png" />
 </div>
 </div></section>
     </section><section>
