--- a/3_Sentiment.slides.html
+++ b/3_Sentiment.slides.html
@@ -1736,20 +1736,20 @@ text-align: inherit;
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>We aren't all happy at the same time</p>
 <div class="figure">
-<img src="twitter_day.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/twitter_day.png" />
 </div>
 <p>A list based sentiment analysis by Scott Golder and Michael Macy</p>
 </div></section>
     </section><section>
     <section>
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Winning makes us happy.<br /><img src="fb.png" /><br />by Sean J. Taylor (<span class="citation">@seanjtaylor</span>)</p>
+<p>Winning makes us happy.<br /><img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/fb.png" /><br />by Sean J. Taylor (<span class="citation">@seanjtaylor</span>)</p>
 </div></section>
     </section><section>
     <section>
 <div class="text_cell_render border-box-sizing rendered_html">
 <div class="figure">
-<img src="blank.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/blank.png" />
 </div>
 </div></section>
     </section><section>
@@ -4390,12 +4390,6 @@ In&nbsp;[94]:
 
 </div>
     </div></section>
-    </section><section>
-    <section>
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>And that's the basics of Python.</p>
-<p>-- Swap</p>
-</div></section>
     </section>
 </div>
 </div>
