--- a/4_Upworthy.slides.html
+++ b/4_Upworthy.slides.html
@@ -1740,7 +1740,7 @@ text-align: inherit;
     <section>
 <div class="text_cell_render border-box-sizing rendered_html">
 <div class="figure">
-<img src="upworth_2.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/upworth_2.png" />
 </div>
 </div></section>
     </section><section>
@@ -1920,7 +1920,7 @@ In&nbsp;[58]:
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Look at the source code of a sample page.</p>
 <div class="figure">
-<img src="show_source.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/show_source.png" />
 </div>
 </div></section>
     </section><section>
@@ -1928,7 +1928,7 @@ In&nbsp;[58]:
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Look at the source code of a sample page.</p>
 <div class="figure">
-<img src="showing_source.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/showing_source.png" />
 </div>
 </div></section>
     </section><section>
@@ -1936,14 +1936,14 @@ In&nbsp;[58]:
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>When a simple idea...</p>
 <div class="figure">
-<img src="up_sample.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/up_sample.png" />
 </div>
 </div></section>
     </section><section>
     <section>
 <div class="text_cell_render border-box-sizing rendered_html">
 <div class="figure">
-<img src="search.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/search.png" />
 </div>
 </div><div class="fragment">
     
@@ -1964,7 +1964,7 @@ In&nbsp;[58]:
 <p>Regular expressions</p>
 <p>xkcd - 208</p>
 <div class="figure">
-<img src="regular_expressions.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/regular_expressions.png" />
 </div>
 </div></section>
     </section><section>
@@ -1973,7 +1973,7 @@ In&nbsp;[58]:
 <p>Regular expressions</p>
 <p>xkcd - 1171</p>
 <div class="figure">
-<img src="perl_problems.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/perl_problems.png" />
 </div>
 </div></section>
     </section><section>
@@ -3332,7 +3332,7 @@ The Hilarious Beer Commercial No Brewery Wants You To See
     
 <div class="text_cell_render border-box-sizing rendered_html">
 <div class="figure">
-<img src="why_page2.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/why_page2.png" />
 </div>
 </div>
     </div></section>
