--- a/5_Times_API.slides.html
+++ b/5_Times_API.slides.html
@@ -1756,7 +1756,7 @@ text-align: inherit;
     <section>
 <div class="text_cell_render border-box-sizing rendered_html">
 <div class="figure">
-<img src="times_inequality.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/times_inequality.png" />
 </div>
 </div></section>
     </section><section>
@@ -1764,7 +1764,7 @@ text-align: inherit;
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>No love with the scrape!!!</p>
 <div class="figure">
-<img src="files\no_luck.png" />
+<img src="https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/no_luck.png" />
 </div>
 </div></section>
     </section><section>
