--- a/3_Sentiment.slides.html
+++ b/3_Sentiment.slides.html
@@ -4389,7 +4389,22 @@ In&nbsp;[94]:
 </div>
 
 </div>
-    </div></section>
+    </div>
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="some-takeaways">Some takeaways</h4>
+<ol style="list-style-type: decimal">
+<li>That's most of what you need to know in Python.
+<ol style="list-style-type: decimal">
+<li>List comprehension</li>
+<li>Functions/Classes</li>
+</ol></li>
+<li>Start simple.
+<ol style="list-style-type: decimal">
+<li>Develop a solution for one case</li>
+<li>Scale up (so make sure your 2A is generalizable.)</li>
+</ol></li>
+</ol>
+</div></section>
     </section>
 </div>
 </div>
