--- a/6_Classification.slides.html
+++ b/6_Classification.slides.html
@@ -1735,6 +1735,23 @@ text-align: inherit;
     <section>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Classification with scikit learn</p>
+</div></section>
+    </section><section>
+    <section>
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="faking-it-as-a-data-scientist">Faking it as a Data Scientist</h4>
+<ol style="list-style-type: decimal">
+<li>Supervised learning / Classification</li>
+<li>Logistic Regression</li>
+<li>Naive Bayes</li>
+<li>SVM</li>
+<li><p>Ensemble/Random Forest</p></li>
+<li>Unsupervised learning</li>
+<li>PCA</li>
+<li>Topic Modeling</li>
+<li>Features</li>
+<li><p>Train/test</p></li>
+</ol>
 </div><div class="fragment">
     
 <div class="text_cell_render border-box-sizing rendered_html">
